--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
 *.so
 
-# Folders
 _obj
 _test
 
-# Architecture specific extensions/prefixes
+luximr.ttf
+
 *.[568vq]
 [568vq].out
 
@@ -22,3 +21,7 @@ _testmain.go
 *.exe
 *.test
 *.prof
+*.zip
+lambda
+
+.DS_Store
